P01_Project_Selection.md

--- a/Exercise1_srs/p1.md
+++ b/Exercise1_srs/p1.md
@@ -1,7 +1,7 @@
-project selection
-project Title
+# project selection
+## project Title
 Secure QR Code–Based E-Ticket Verification System
-Team Members
+## Team Members
 
 Project Manager – E. Rakshitha
 Responsible for overall project planning, task allocation, and team coordination.
